--- a/index.html
+++ b/index.html
@@ -56,6 +56,17 @@
 
         </div>
 
+        <div class="enterbuttons">
+
+            <button type="submit"  class="labutton" value="Hi">Google Search
+            </button>
+            <button type="submit"  class="labutton">I'm Feeling Lucky
+                
+            </button>
+        </div>
+
+
+
             </div>
 
     </div>
