--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
         <div class="enterbuttons">
 
-            <button type="submit"  class="labutton" value="Hi">Google Search
+            <button type="submit"  class="labutton" >Google Search
             </button>
             <button type="submit"  class="labutton">I'm Feeling Lucky
                 
